Moved the dancing links alorithm to a modlue (dlx) and created a (kind of convulted) api in order to us it

--- a/TypeScriptHTMLApp1/TypeScriptHTMLApp1.csproj
+++ b/TypeScriptHTMLApp1/TypeScriptHTMLApp1.csproj
@@ -29,6 +29,7 @@
   </ItemGroup>
   <ItemGroup>
     <TypeScriptCompile Include="app.ts" />
+    <TypeScriptCompile Include="Dlx.ts" />
     <TypeScriptCompile Include="Scripts\typings\jquery\jquery.d.ts" />
     <TypeScriptCompile Include="Scripts\typings\raphael\raphael.d.ts" />
   </ItemGroup>
